--- a/TODO
+++ b/TODO
@@ -3,14 +3,28 @@ Todo:
   Visual:
   ✔ Por mapa a esquerda @done(23-01-12 19:08)
   ✔ Por divisao da wikipedia @done(23-01-12 19:08)
-  ☐ mudar cores para mais spotify friendly
-  ☐ populate listas
-
-
-
+  ✔ mudar cores para mais spotify friendly @done(23-01-14 17:02)
+  ☐ Mudar mapas todos
+    ☐ 250
+    ☐ 320
+    ☐ 530
+    ☐ 540
+    ☐ 650
+    ☐ 750
+    ✔ 850 @done(23-01-14 17:31)
+    ☐ 960
+    ☐ 1280
+    ☐ 1450
+    
   Funcao:
   ✔ fazer com que painel do pais mude dinamaicamente (e nao permanente) @done(23-01-12 19:08)
   ☐ descobrir como ter um embedded player
+  ✔ crirar formato json @done(23-01-14 18:58)
+  ☐ ver se da para por um toggle para filtrar por
+    ☐ criador (spotify vs non-spotify)
+    ☐ estilo de musica (?)
+  ✔ por playlists dinamicamente do json file @done(23-01-14 18:58)
+
   
 
   
